--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>ClearInsight</title>
   <%= stylesheet_link_tag "application", :media => "all" %>
+  <%= yield :stylesheet_includes %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
