--- a/app/views/stories/_detail.html.erb
+++ b/app/views/stories/_detail.html.erb
@@ -16,7 +16,7 @@
       <% comment.attachments.each do |attach| %>
           <div class="attachment-item inline-block" title="<%= attach.name %>">
             <div class="attachment-sign atta-<%= attach.type %>" href="<%= attach.path %>">
-              <a href="<%= attach.path %>" class='attach-download'>
+              <a href="<%= attach.path %>" class='attach-download' target="_blank">
                 <div class="attachment-operate" title="下载">
                   <i class="icon-arrow-down icon-white pointer pull-right"> </i>
                 </div>
