--- a/app/views/stories/_create.html.erb
+++ b/app/views/stories/_create.html.erb
@@ -1,4 +1,8 @@
-<div class="dashboard-add-wrap" id="dashboard-add-wrap" style="display: block">
+<section class="solid">
+  <a class="btn btn-primary" id="add-dashboard-show"></a>
+</section>
+
+<div class="dashboard-add-wrap" id="dashboard-add-wrap">
   <div class="dashboard-add-inner" id="dashboard-add-inner">
     <div class="dashboard-add-sub-menu" id="dashboard-add-sub-menu">
       <a class="icon-remove" id="close-add-dashboard"> <%= t 'dashboard_group.dashboard.close' %></a>
