--- a/app/views/kpis/_access.html.erb
+++ b/app/views/kpis/_access.html.erb
@@ -42,6 +42,7 @@
                 <span><%= p.name %></span>
             <% end %>
           </p>
+          <a class="btn btn-success edit-kpi-attribute" work_at="1">订阅KPI</a>
         </div>
       </li>
   <% end if @kpis %>
