--- a/app/views/stories/_detail.html.erb
+++ b/app/views/stories/_detail.html.erb
@@ -1,4 +1,8 @@
 <p id="notice"><%= notice %></p>
+<hr/>
+<h3>Chart</h3>
+<%= render partial: 'chart' %>
+<hr/>
 <div>
   <b>Title:</b>
   <%= @story.title %>
