--- a/app/views/story_sets/story.html.erb
+++ b/app/views/story_sets/story.html.erb
@@ -28,6 +28,9 @@
 </div>
 <% content_for :javascript_includes do %>
     <%= javascript_include_tag 'magnific.popup/jquery.magnific-popup.min' %>
+    <%= javascript_include_tag "highcharts.js"%>
+    <%= javascript_include_tag "high_chart_template_analytic.js"%>
+    <%= javascript_include_tag "Analytics_init.js"%>
 <% end %>
 <script type="text/javascript">
     $(function () {
