--- a/app/views/stories/_create.html.erb
+++ b/app/views/stories/_create.html.erb
@@ -131,6 +131,9 @@
     <%= javascript_include_tag "Dashboard-add.js"%>
     <%= javascript_include_tag "Dashboard-init.js"%>
     <%= javascript_include_tag "dashboard_type_special.js"%>
+
+    <%= javascript_include_tag "high_chart_template_analytic.js"%>
+    <%= javascript_include_tag "Analytics_init.js"%>
 <% end %>
 <script type="text/javascript">
     $(function () {
