--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -36,5 +36,11 @@ header{
     .empty{
       border-left:2px solid $split-color;
     }
+    &>li.select-language{
+        .menu-select-language{
+          background:$nav-dark;
+      }
+    }
+
   }
 }
