--- a/app/views/story_sets/new.html.erb
+++ b/app/views/story_sets/new.html.erb
@@ -1,21 +1,22 @@
-<h1>New story_set</h1>
+<div class="story-set-new">
+  <p>Create new project</p>
+  <div class="divide"></div>
+  <div class="form">
+    <p>Project name</p>
+    <input type="text"  id="storyset-title"/>
+    <p>Project description</p>
+    <textarea id="storyset-description"></textarea>
+    <p>People participate</p>
+    <select multiple class="chosen-select" data-placeholder="choose member" id="storyset-users">
+      <% User.by_role(300).each do |u|%>
+          <option user="<%= u.id%>"><%= u.first_name%></option>
+      <% end %>
+    </select>
+    <a class="btn btn-primary" id="story-create-btn">create</a>
+    <%= link_to 'cancel', story_sets_path,:class=>"btn" %>
+  </div>
+</div>
 
-<label>Title:</label>
-<input id="storyset-title" type="text" placeholder="title"/>
-<br/>
-<label>Description:</label>
-<input id="storyset-description" type="text" placeholder="description" />
-<br/>
-<select id="storyset-users" multiple size="10">
-  <% User.by_role(300).each do |u|%>
-  <option user="<%= u.id%>"><%= u.first_name%></option>
-  <% end %>
-</select>
-<br/>
-<input id="storyset-create" type="button" value="Create" onclick="MANAGE.story_set.create()">
-<br/>
-
-<%= link_to 'Back', story_sets_path %>
 
 <% content_for :javascript_includes do%>
     <%= javascript_include_tag "Manage-storyset.js"%>
