--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -42,6 +42,9 @@
       <li>
         <a href="<%= analyse_kpi_entries_path %>" guide-name="analyze_menu"> <span><%= t 'menu.analytics' %></span> </a>
       </li>
+      <li>
+        <a href="<%= story_sets_path %>" guide-name="analyze_menu"> <span>我的讨论组</span> </a>
+      </li>
       <li><a>
         <span>&nbsp;</span>
       </a></li>
