--- a/app/assets/stylesheets/story_sets.css.scss
+++ b/app/assets/stylesheets/story_sets.css.scss
@@ -95,6 +95,9 @@
             width:60%;
             padding-left:20px;
             height:100%;
+            p{
+              @include word-break;
+            }
             p:first-of-type{
               margin-top:38px;
               font-size:24px;
